@@ -3,21 +3,26 @@
 
 package com.microsoft.typespec.http.client.generator.core.extension.plugin;
 
-import com.azure.json.JsonProviders;
-import com.azure.json.JsonReader;
-import com.azure.json.JsonSerializable;
-import com.azure.json.JsonToken;
-import com.azure.json.JsonWriter;
+import com.microsoft.typespec.http.client.generator.core.mapper.Mappers;
+import com.microsoft.typespec.http.client.generator.core.mapper.azurevnext.AzureVNextMapperFactory;
+import com.microsoft.typespec.http.client.generator.core.mapper.clientcore.ClientCoreMapperFactory;
+import com.microsoft.typespec.http.client.generator.core.template.Templates;
+import com.microsoft.typespec.http.client.generator.core.template.azurevnext.AzureVNextTemplateFactory;
+import com.microsoft.typespec.http.client.generator.core.template.clientcore.ClientCoreTemplateFactory;
+import io.clientcore.core.serialization.json.JsonReader;
+import io.clientcore.core.serialization.json.JsonToken;
+import io.clientcore.core.utils.CoreUtils;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Consumer;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import org.slf4j.Logger;
 
@@ -29,12 +34,13 @@ public class JavaSettings {
     private static JavaSettings instance;
     private static NewPlugin host;
     private static String header;
-    private static final Map<String, Object> SIMPLE_JAVA_SETTINGS = new HashMap<>();
+    private static final Map<String, Object> SIMPLE_JAVA_SETTINGS = new LinkedHashMap<>();
     private static Logger logger;
     private final boolean useKeyCredential;
     private final String flavor;
     private final boolean noCustomHeaders;
     private final boolean disableTypedHeadersMethods;
+    private final boolean useRestProxy;
 
     static void setHeader(String value) {
         if ("MICROSOFT_MIT".equals(value)) {
@@ -64,7 +70,7 @@ public class JavaSettings {
         }
     }
 
-    static void setHost(NewPlugin host) {
+    public static void setHost(NewPlugin host) {
         JavaSettings.host = host;
         logger = new PluginLogger(host, JavaSettings.class);
     }
@@ -116,7 +122,7 @@ public class JavaSettings {
 
     private static Map<Integer, String> parseStatusCodeMapping(JsonReader jsonReader) throws IOException {
         return jsonReader.readObject(reader -> {
-            Map<Integer, String> mapping = new HashMap<>();
+            Map<Integer, String> mapping = new LinkedHashMap<>();
             while (reader.nextToken() != JsonToken.END_OBJECT) {
                 int key = Integer.parseInt(reader.getFieldName());
                 reader.nextToken();
@@ -138,9 +144,6 @@ public class JavaSettings {
         // The modeler settings.
         this.modelerSettings = new ModelerSettings(
             host.getValueWithJsonReader("modelerfour", jsonReader -> jsonReader.readMap(JsonReader::readUntyped)));
-
-        // Whether to generate the Azure.
-        this.azure = getBooleanValue(host, "azure-arm", false);
 
         // Whether to generate the SDK integration.
         this.sdkIntegration = getBooleanValue(host, "sdk-integration", false);
@@ -180,7 +183,9 @@ public class JavaSettings {
         // The brand name we use to generate SDK.
         this.flavor = getStringValue(host, "flavor", "azure");
 
-        this.modelsSubpackage = getStringValue(host, "models-subpackage", isBranded(this.flavor) ? "models" : "");
+        updateFlavorFactories();
+
+        this.modelsSubpackage = getStringValue(host, "models-subpackage", isAzureV1() || isAzureV2() ? "models" : "");
 
         // The custom types that will be generated.
         String customTypes = getStringValue(host, "custom-types", "");
@@ -212,7 +217,7 @@ public class JavaSettings {
         this.syncMethods = SyncMethodsGeneration.fromValue(getStringValue(host, "sync-methods", "essential"));
 
         // Whether to add a logger to the generated clients.
-        this.clientLogger = getBooleanValue(host, "client-logger", false);
+        this.clientLogger = getBooleanValue(host, "client-logger", true);
 
         // Whether required fields will be included in the constructor arguments for generated models.
         this.requiredFieldsAsConstructorArgs = getBooleanValue(host, "required-fields-as-ctor-args", false);
@@ -259,8 +264,8 @@ public class JavaSettings {
         this.useIterable = getBooleanValue(host, "use-iterable", false);
 
         // The versions of the service.
-        this.serviceVersions = host.getValueWithJsonReader("service-versions",
-            jsonReader -> jsonReader.readArray(JsonReader::getString));
+        this.serviceVersions
+            = host.getValueWithJsonReader("service-versions", reader -> reader.readArray(JsonReader::getString));
 
         // The target for the <code>@JsonFlatten</code> annotation for x-ms-client-flatten.
         String clientFlattenAnnotationTarget = getStringValue(host, "client-flattened-annotation-target", "");
@@ -276,20 +281,20 @@ public class JavaSettings {
         this.clientBuilderDisabled = getBooleanValue(host, "disable-client-builder", false);
 
         // The polling configuration.
-        Map<String, PollingDetails> pollingConfig
-            = host.getValueWithJsonReader("polling", jsonReader -> jsonReader.readMap(PollingDetails::fromJson));
-        if (pollingConfig != null) {
-            if (!pollingConfig.containsKey("default")) {
-                pollingConfig.put("default", new PollingDetails());
-            }
+        final Map<String, PollingSettings> operationPollingMapping
+            = host.getValueWithJsonReader("polling", reader -> reader.readMap(PollingSettings::fromJson));
+        if (operationPollingMapping != null && !operationPollingMapping.containsKey("default")) {
+            operationPollingMapping.put("default", new PollingSettings());
         }
-        this.pollingConfig = pollingConfig;
+        this.operationPollingMapping = operationPollingMapping;
 
         // Whether to generate samples.
         this.generateSamples = getBooleanValue(host, "generate-samples", false);
 
         // Whether to generate tests.
         this.generateTests = getBooleanValue(host, "generate-tests", false);
+
+        this.useRestProxy = getBooleanValue(host, "use-rest-proxy", false);
 
         // Whether to generate the send request method.
         this.generateSendRequestMethod = false;
@@ -382,19 +387,59 @@ public class JavaSettings {
 
         // Whether to use object for unknown.
         this.useObjectForUnknown = getBooleanValue(host, "use-object-for-unknown", false);
+
+        // Option to rename models (ObjectSchema, ChoiceSchema, SealedChoiceSchema).
+        loadStringSetting("rename-model", s -> {
+            if (!CoreUtils.isNullOrEmpty(s)) {
+                String[] renamePairs = s.split(Pattern.quote(","));
+                for (String pair : renamePairs) {
+                    String[] fromAndTo = pair.split(Pattern.quote(":"));
+                    if (fromAndTo.length == 2) {
+                        String from = fromAndTo[0];
+                        String to = fromAndTo[1];
+                        if (!CoreUtils.isNullOrEmpty(from) && !CoreUtils.isNullOrEmpty(to)) {
+                            this.renameModel.put(from, to);
+                        }
+                    }
+                }
+            }
+        });
+    }
+
+    private void updateFlavorFactories() {
+        if (isAzureV2()) {
+            Mappers.setFactory(new AzureVNextMapperFactory());
+            Templates.setFactory(new AzureVNextTemplateFactory());
+        } else if (!isAzureV1()) {
+            Mappers.setFactory(new ClientCoreMapperFactory());
+            Templates.setFactory(new ClientCoreTemplateFactory());
+        }
     }
 
     /**
-     * Whether to generate with Azure branding.
+     * Whether to generate with Azure V1.
      *
-     * @return Whether to generate with Azure branding.
+     * @return Whether to generate with Azure V1.
      */
-    public boolean isBranded() {
-        return isBranded(this.flavor);
+    public boolean isAzureV1() {
+        return "azure".equalsIgnoreCase(flavor);
     }
 
-    private static boolean isBranded(String flavor) {
-        return "azure".equalsIgnoreCase(flavor);
+    /**
+     * Whether to generate with Azure V2.
+     *
+     * @return Whether to generate with Azure V2.
+     */
+    public boolean isAzureV2() {
+        return "azurev2".equalsIgnoreCase(this.flavor);
+    }
+
+    public boolean isUnbranded() {
+        return !isAzureV1() && !isAzureV2();
+    }
+
+    public boolean useRestProxy() {
+        return this.useRestProxy;
     }
 
     private final String keyCredentialHeaderName;
@@ -428,17 +473,6 @@ public class JavaSettings {
      */
     public Set<String> getCredentialScopes() {
         return credentialScopes;
-    }
-
-    private final boolean azure;
-
-    /**
-     * Whether to generate the Azure.
-     *
-     * @return Whether to generate the Azure.
-     */
-    public final boolean isAzure() {
-        return azure;
     }
 
     private final String artifactId;
@@ -564,15 +598,6 @@ public class JavaSettings {
         return fluent == Fluent.PREMIUM;
     }
 
-    /**
-     * Whether to generate the Azure or Fluent.
-     *
-     * @return Whether to generate the Azure or Fluent.
-     */
-    public final boolean isAzureOrFluent() {
-        return isAzure() || isFluent();
-    }
-
     // configure for model flatten in client
 
     /**
@@ -624,7 +649,7 @@ public class JavaSettings {
          * @param settings The settings that are used by the modeler.
          */
         public ModelerSettings(Map<String, Object> settings) {
-            this.settings = settings == null ? Collections.emptyMap() : settings;
+            this.settings = settings == null ? Map.of() : settings;
         }
 
         /**
@@ -1154,6 +1179,15 @@ public class JavaSettings {
         return dataPlaneClient;
     }
 
+    /**
+     * Whether the client is vanilla client.
+     *
+     * @return Whether the client is a vanilla client.
+     */
+    public boolean isVanilla() {
+        return isAzureV1() && !isDataPlaneClient() && !isFluent();
+    }
+
     private final boolean useIterable;
 
     /**
@@ -1272,153 +1306,25 @@ public class JavaSettings {
         return generateGraalVmConfig;
     }
 
-    /**
-     * Represents the details of polling for a long-running operation.
-     */
-    public static class PollingDetails implements JsonSerializable<PollingDetails> {
-        private String strategy;
-        private String syncStrategy;
-        private String intermediateType;
-        private String finalType;
-        private String pollInterval;
-
-        /**
-         * Creates a new PollingDetails object.
-         */
-        public PollingDetails() {
-        }
-
-        /**
-         * The default polling strategy format.
-         */
-        public static final String DEFAULT_POLLING_STRATEGY_FORMAT
-            = String.join("\n", "new %s<>(new PollingStrategyOptions({httpPipeline})", "    .setEndpoint({endpoint})",
-                "    .setContext({context})", "    .setServiceVersion({serviceVersion}))");
-
-        private static final String DEFAULT_POLLING_CODE
-            = String.format(DEFAULT_POLLING_STRATEGY_FORMAT, "DefaultPollingStrategy");
-
-        private static final String DEFAULT_SYNC_POLLING_CODE
-            = String.format(DEFAULT_POLLING_STRATEGY_FORMAT, "SyncDefaultPollingStrategy");
-
-        /**
-         * Gets the strategy for polling.
-         *
-         * @return The strategy for polling.
-         */
-        public String getStrategy() {
-            if (strategy == null || "default".equalsIgnoreCase(strategy)) {
-                return DEFAULT_POLLING_CODE;
-            } else {
-                return strategy;
-            }
-        }
-
-        /**
-         * Gets the sync strategy for polling.
-         *
-         * @return The sync strategy for polling.
-         */
-        public String getSyncStrategy() {
-            if (syncStrategy == null || "default".equalsIgnoreCase(syncStrategy)) {
-                return DEFAULT_SYNC_POLLING_CODE;
-            } else {
-                return syncStrategy;
-            }
-        }
-
-        /**
-         * Gets the intermediate type for polling.
-         *
-         * @return The intermediate type for polling.
-         */
-        public String getIntermediateType() {
-            return intermediateType;
-        }
-
-        /**
-         * Gets the final type for polling.
-         *
-         * @return The final type for polling.
-         */
-        public String getFinalType() {
-            return finalType;
-        }
-
-        /**
-         * Gets the polling interval in seconds.
-         *
-         * @return The polling interval in seconds.
-         */
-        public int getPollIntervalInSeconds() {
-            return pollInterval != null ? Integer.parseInt(pollInterval) : 1;
-        }
-
-        @Override
-        public JsonWriter toJson(JsonWriter jsonWriter) throws IOException {
-            return jsonWriter.writeStartObject()
-                .writeStringField("strategy", strategy)
-                .writeStringField("sync-strategy", syncStrategy)
-                .writeStringField("intermediate-type", intermediateType)
-                .writeStringField("final-type", finalType)
-                .writeStringField("poll-interval", pollInterval)
-                .writeEndObject();
-        }
-
-        /**
-         * Deserializes a PollingDetails instance from the JSON data.
-         *
-         * @param jsonReader The JSON reader to deserialize from.
-         * @return A PollingDetails instance deserialized from the JSON data.
-         * @throws IOException If an error occurs during deserialization.
-         */
-        public static PollingDetails fromJson(JsonReader jsonReader) throws IOException {
-            return jsonReader.readObject(reader -> {
-                PollingDetails pollingDetails = new PollingDetails();
-
-                while (reader.nextToken() != JsonToken.END_OBJECT) {
-                    String fieldName = reader.getFieldName();
-                    reader.nextToken();
-
-                    if ("strategy".equals(fieldName)) {
-                        pollingDetails.strategy = reader.getString();
-                    } else if ("sync-strategy".equals(fieldName)) {
-                        pollingDetails.syncStrategy = reader.getString();
-                    } else if ("intermediate-type".equals(fieldName)) {
-                        pollingDetails.intermediateType = reader.getString();
-                    } else if ("final-type".equals(fieldName)) {
-                        pollingDetails.finalType = reader.getString();
-                    } else if ("poll-interval".equals(fieldName)) {
-                        pollingDetails.pollInterval = reader.getString();
-                    } else {
-                        reader.skipChildren();
-                    }
-                }
-
-                return pollingDetails;
-            });
-        }
-    }
-
-    private final Map<String, PollingDetails> pollingConfig;
+    private final Map<String, PollingSettings> operationPollingMapping;
 
     /**
      * Gets the polling configuration for the specified operation.
      *
-     * @param operation The operation name.
+     * @param operationId The operation id.
      * @return The polling configuration for the specified operation, or the default polling configuration if no
      * configuration is specified for the operation.
      */
-    public PollingDetails getPollingConfig(String operation) {
-        if (pollingConfig == null) {
+    public PollingSettings getPollingSettings(String operationId) {
+        if (operationPollingMapping == null) {
             return null;
         }
-        for (String key : pollingConfig.keySet()) {
-            if (key.equalsIgnoreCase(operation)) {
-                return pollingConfig.get(key);
+        for (String key : operationPollingMapping.keySet()) {
+            if (key.equalsIgnoreCase(operationId)) {
+                return operationPollingMapping.get(key);
             }
         }
-        return pollingConfig.get("default");
+        return operationPollingMapping.get("default");
     }
 
     private final boolean annotateGettersAndSettersForSerialization;
@@ -1617,6 +1523,12 @@ public class JavaSettings {
         return useObjectForUnknown;
     }
 
+    private final Map<String, String> renameModel = new LinkedHashMap<>();
+
+    public Map<String, String> getJavaNamesForRenameModel() {
+        return renameModel;
+    }
+
     private static final String DEFAULT_CODE_GENERATION_HEADER
         = String.join("\n", "Code generated by Microsoft (R) AutoRest Code Generator %s",
             "Changes may cause incorrect behavior and will be lost if the code is regenerated.");
@@ -1682,7 +1594,7 @@ public class JavaSettings {
                 return null;
             } else if (jsonString.startsWith("[")) {
                 // Array values will need to be parsed.
-                try (JsonReader jsonReader = JsonProviders.createReader(jsonString)) {
+                try (JsonReader jsonReader = JsonReader.fromString(jsonString)) {
                     List<String> settingValueList = jsonReader.readArray(JsonReader::getString);
                     logger.debug("Option, array, {} : {}", settingName, settingValueList);
                     action.accept(settingValueList);
@@ -1690,7 +1602,7 @@ public class JavaSettings {
             } else {
                 // Single values will be returned as the string representation.
                 logger.debug("Option, string, {} : {}", settingName, jsonString);
-                action.accept(Collections.singletonList(jsonString));
+                action.accept(List.of(jsonString));
             }
 
             return null;
